--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
         // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
         // ★★★  กรุณาใส่ LIFF ID และ WEB APP URL ของคุณที่นี่  ★★★
         // ★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★★
-        const LIFF_ID = '2008326721-bmkWomzv'; // ใช้ LIFF ID เดิมของผู้ใช้
-        const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzDI78tUezqDWqN_NVojQZaioS5w2kZdOWernJDK0e0G-v7Ff0fYbS7G58ZjSdTdT_mcw/exec'; // ใช้ GAS WEB APP URL เดิมของผู้ใช้
+        const LIFF_ID = '2008333976-2gW7KwAZ'; // ใช้ LIFF ID เดิมของผู้ใช้
+        const GAS_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxryjORkVpc9JEO2PqsquU87phYyo8L-ubyi8OUNnqzlTckOtaHkRiXVIHWM8X-Itw/exec'; // ใช้ GAS WEB APP URL เดิมของผู้ใช้
     </script>
     <script type="module" src="js/api.js"></script>
     <script type="module" src="js/utils.js"></script>
